fixed some issues with topbrand on mobile size as well as for fotter and header scss styles

--- a/src/style/sections/_footer.scss
+++ b/src/style/sections/_footer.scss
@@ -15,6 +15,10 @@
     flex-direction: column-reverse;
   }
 
+  @include respond(phone) {
+    font-size: 2rem;
+  }
+
   &__left-side {
     border: 1px solid $main-yellow-color;
     width: 50%;
@@ -58,6 +62,10 @@
     justify-content: center;
     align-items: center;
 
+    @include respond(phone) {
+      font-size: 2rem;
+    }
+
     .footer__contact-icon {
       margin-right: 1rem;
     }
@@ -87,9 +95,17 @@
         padding: 0 1rem;
 
         @include respond(tab-port) {
+          display: flex;
+          justify-content: center;
+          align-items: center;
           height: 20rem;
           width: 100%;
           padding-top: 5rem;
+        }
+
+        @include respond(phone) {
+          width: 75%;
+          transform: translateX(15%);
         }
       }
     }
@@ -121,6 +137,11 @@
         -webkit-background-clip: text;
         color: transparent;
         padding-bottom: 1rem;
+
+        @include respond(phone) {
+          font: 3rem;
+          text-align: center;
+        }
       }
 
       input {
