--- a/src/style/sections/_header.scss
+++ b/src/style/sections/_header.scss
@@ -45,7 +45,7 @@
         }
 
         @include respond(tab-port) {
-          width: 55%;
+          width: 65%;
           transform: translate(0, 15rem);
         }
         @include respond(phone) {
